--- a/app/SCSS/globals/_colors.scss
+++ b/app/SCSS/globals/_colors.scss
@@ -4,8 +4,9 @@
   --facebook: hsl(208, 92%, 53%);
   --twitter: hsl(203, 89%, 53%);
   --instagram-start: hsl(37, 97%, 70%);
-  --instagram--end: hsl(329, 70%, 58%);
-  --youTube: hsl(348, 97%, 39%);
+  --instagram-middle: hsl(5, 77%, 71%);
+  --instagram-end: hsl(329, 70%, 58%);
+  --youtube: hsl(348, 97%, 39%);
   --toggle-bg-start: hsl(210, 78%, 56%);
   --toggle-bg-end: hsl(146, 68%, 55%);
   --toggle: hsl(230, 22%, 74%);
