--- a/app/SCSS/components/_toggle.scss
+++ b/app/SCSS/components/_toggle.scss
@@ -2,37 +2,19 @@
 
 .toggle {
   display: grid;
-  grid-template-columns: 1fr u.rem(48) 1fr;
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: 1fr u.rem(48);
   gap: u.rem(4.8) u.rem(8);
   border: none;
   margin: 0;
 
-  label {
+  legend {
     font-size: u.rem(14);
-    align-self: center;
-
-    &[for="dark"] {
-      grid-column: 1 / 2;
-      justify-self: end;
-    }
-
-    &[for="system"] {
-      grid-column: 1 / 4;
-      grid-row: 2 / 3;
-      justify-self: center;
-      align-self: start;
-    }
-
-    &[for="light"] {
-      grid-column: 3 / 4;
-    }
+    grid-column: 1 / 2;
   }
 
   &__wrapper {
     position: relative;
     grid-column: 2 / 3;
-    grid-row: 1 / 2;
     height: u.rem(24);
   }
 
