--- a/app/SCSS/components/_header.scss
+++ b/app/SCSS/components/_header.scss
@@ -22,10 +22,6 @@
   &__subtitle {
     font-size: u.rem(14);
     font-weight: 700;
-    color: var(--dark-text1);
-  }
-
-  &__toggle {
-    margin-left: auto;
+    color: var(--text-color2);
   }
 }
